--- a/tools/CustomSetupTool/CustomSetupTool.vcxproj
+++ b/tools/CustomSetupTool/CustomSetupTool.vcxproj
@@ -99,6 +99,7 @@
       <ControlFlowGuard>Guard</ControlFlowGuard>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
