--- a/tools/peview/peview.vcxproj
+++ b/tools/peview/peview.vcxproj
@@ -354,7 +354,9 @@
   <ItemGroup>
     <ClCompile Include="cfgprp.c" />
     <ClCompile Include="chcol.c" />
+    <ClCompile Include="clrtableimports.cpp" />
     <ClCompile Include="clrprp.c" />
+    <ClCompile Include="clrtableimportprp.c" />
     <ClCompile Include="colmgr.c" />
     <ClCompile Include="attributes.c" />
     <ClCompile Include="debugprp.c" />
