DotNetTools: Add .NET Core support, Fix .NET Core thread stack enumeration #943

--- a/plugins/DotNetTools/DotNetTools.rc
+++ b/plugins/DotNetTools/DotNetTools.rc
@@ -61,7 +61,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION ".NET assemblies"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         ".NET assemblies",IDC_LIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x1a,2,19,256,239,WS_EX_CLIENTEDGE
+    CONTROL         ".NET assemblies",IDC_LIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0xa,2,19,256,239,WS_EX_CLIENTEDGE
     PUSHBUTTON      "Options",IDC_OPTIONS,2,2,50,14
     EDITTEXT        IDC_SEARCHEDIT,114,3,143,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Refresh",IDC_REFRESH,53,2,50,14
