--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -98,17 +98,17 @@ BEGIN
     LTEXT           "Started:",IDC_STATIC,13,156,28,8
     EDITTEXT        IDC_STARTED,79,154,168,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Parent console:",IDC_STATIC,13,172,52,8
-    EDITTEXT        IDC_PARENTCONSOLE,79,170,101,12,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Image type:",IDC_PROCESSTYPELABEL,185,172,41,8,NOT WS_VISIBLE
-    LTEXT           "32-bit",IDC_PROCESSTYPETEXT,228,172,20,8,NOT WS_VISIBLE
+    EDITTEXT        IDC_PARENTCONSOLE,79,170,168,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Parent process:",IDC_STATIC,13,188,52,8
     EDITTEXT        IDC_PARENTPROCESS,79,186,147,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "View",IDC_VIEWPARENTPROCESS,230,185,17,15,BS_ICON
     LTEXT           "Mitigation policies:",IDC_STATIC,13,204,59,8
     EDITTEXT        IDC_MITIGATION,79,202,126,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Details",IDC_VIEWMITIGATION,209,201,38,14
-    LTEXT           "Protection:",IDC_STATIC,13,222,36,8
-    EDITTEXT        IDC_PROTECTION,51,222,80,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Protection:",IDC_STATIC,13,222,40,8
+    EDITTEXT        IDC_PROTECTION,53,222,80,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Image type:",IDC_STATIC,13,233,40,8
+    EDITTEXT        IDC_PROCESSTYPETEXT,53,233,80,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     PUSHBUTTON      "View",IDC_VIEWCOMMANDLINE,230,121,17,15,BS_ICON
     LTEXT           "Image file name:",IDC_STATIC,15,80,86,8
     EDITTEXT        IDC_FILENAMEWIN32,15,91,191,12,ES_AUTOHSCROLL | ES_READONLY
