--- a/tools/peview/peview.rc
+++ b/tools/peview/peview.rc
@@ -568,7 +568,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_TREELIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 0x2,3,21,294,256,WS_EX_CLIENTEDGE
     EDITTEXT        IDC_TREESEARCH,156,3,141,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Options",IDC_SETTINGS,3,3,50,14,WS_DISABLED
+    PUSHBUTTON      "Options",IDC_SETTINGS,3,3,50,14
 END
 
 IDD_PESECURITY DIALOGEX 0, 0, 301, 280
