ExtendedTools: Update fps labels

--- a/plugins/ExtendedTools/ExtendedTools.rc
+++ b/plugins/ExtendedTools/ExtendedTools.rc
@@ -266,8 +266,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "FPS",IDC_GROUPFPS,7,7,355,53,0,WS_EX_TRANSPARENT
     GROUPBOX        "Time per frame",IDC_GROUPFPSLATENCY,7,60,355,21,0,WS_EX_TRANSPARENT
-    GROUPBOX        "Time until present",IDC_GROUPFPSPRESENT,7,82,355,22,0,WS_EX_TRANSPARENT
-    GROUPBOX        "Time during present",IDC_GROUPFPSPRESENTINTERVAL,7,107,355,22,0,WS_EX_TRANSPARENT
+    GROUPBOX        "Present interval",IDC_GROUPFPSPRESENT,7,82,355,22,0,WS_EX_TRANSPARENT
+    GROUPBOX        "Present duration",IDC_GROUPFPSPRESENTINTERVAL,7,107,355,22,0,WS_EX_TRANSPARENT
     GROUPBOX        "Time until frame rendered",IDC_GROUPFPSFRAMERENDER,7,133,355,22,0,WS_EX_TRANSPARENT
     GROUPBOX        "Time until frame displayed",IDC_GROUPFPSFRAMEDISPLAY,7,159,355,22,0,WS_EX_TRANSPARENT
     GROUPBOX        "Average display latency",IDC_GROUPFPSDISPLAYLATENCY,7,184,355,22,0,WS_EX_TRANSPARENT
