Add symbol loading/download status and progress

--- a/ProcessHacker/ProcessHacker.rc
+++ b/ProcessHacker/ProcessHacker.rc
@@ -134,6 +134,7 @@ BEGIN
     CONTROL         "",IDC_LIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0xa,2,19,256,239,WS_EX_CLIENTEDGE
     EDITTEXT        IDC_SEARCH,114,3,144,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Options",IDC_OPTIONS,2,2,50,14
+    LTEXT           "",IDC_STATE,56,5,8,8
 END
 
 IDD_PROCHANDLES DIALOGEX 0, 0, 260, 260
