--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -11,25 +11,25 @@ body:
       required: true
   - type: textarea
     attributes:
-      label: Steps to reproduce
+      label: Steps to reproduce (optional)
       placeholder: How to reproduce the issue?
     validations:
       required: false
   - type: textarea
     attributes:
-      label: Expected behavior
+      label: Expected behavior (optional)
       placeholder: What did you expect to happen?
     validations:
       required: false
   - type: textarea
     attributes:
-      label: Actual behavior
+      label: Actual behavior (optional)
       placeholder: What is currently happening?
     validations:
       required: false
   - type: textarea
     attributes:
-      label: Environment
+      label: Environment (optional)
       placeholder: |
         Process Hacker (stable/nightly) version
         Windows version
