--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: 'Bug report'
 description: Report bugs or other issues
 title: "[Bug]: "
-labels: ["Bug"]
+labels: ["bug,needs investigation"]
 body:
   - type: textarea
     attributes:
