HardwareDevices: Add help text to options window, Add network adapter name to options window, Fix nan/inf text for power devices, Improve updating graphs when paused

--- a/plugins/HardwareDevices/HardwareDevices.rc
+++ b/plugins/HardwareDevices/HardwareDevices.rc
@@ -52,8 +52,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Network Adapters"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_NETADAPTERS_LISTVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,7,251,146
+    CONTROL         "",IDC_NETADAPTERS_LISTVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_TABSTOP,7,20,251,133
     CONTROL         "Show hidden adapters",IDC_SHOW_HIDDEN_ADAPTERS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,159,87,10
+    LTEXT           "Select network devices to show on the system information window:",IDC_STATIC,7,7,230,8
 END
 
 IDD_NETADAPTER_PANEL DIALOGEX 0, 0, 330, 50
@@ -90,7 +91,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Disk Drives"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_DISKDRIVE_LISTVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,7,251,163
+    CONTROL         "",IDC_DISKDRIVE_LISTVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_TABSTOP,7,20,251,150
+    LTEXT           "Select disk devices to show on the system information window:",IDC_STATIC,7,7,216,8
 END
 
 IDD_DISKDRIVE_DIALOG DIALOGEX 0, 0, 315, 135
@@ -193,7 +195,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "RAPL Devices"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_RAPLDEVICE_LISTVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,7,251,163
+    CONTROL         "",IDC_RAPLDEVICE_LISTVIEW,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_TABSTOP,7,20,251,150
+    LTEXT           "Select energy devices to show on the system information window:",IDC_STATIC,7,7,226,8
 END
 
 
