--- a/plugins/HardwareDevices/HardwareDevices.rc
+++ b/plugins/HardwareDevices/HardwareDevices.rc
@@ -107,7 +107,7 @@ BEGIN
     RTEXT           "Disk name",IDC_DISKNAME,107,4,207,16,SS_WORDELLIPSIS
 END
 
-IDD_DISKDRIVE_PANEL DIALOGEX 0, 0, 330, 50
+IDD_DISKDRIVE_PANEL DIALOGEX 0, 0, 416, 50
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -122,10 +122,15 @@ BEGIN
     LTEXT           "Response time",IDC_STATIC,8,22,64,8,SS_ENDELLIPSIS
     LTEXT           "Bytes delta",IDC_STATIC,8,33,57,8,SS_ENDELLIPSIS
     GROUPBOX        "Disk",IDC_STATIC,0,0,135,46
-    PUSHBUTTON      "Details",IDC_DETAILS,278,32,50,14
+    PUSHBUTTON      "Details",IDC_DETAILS,278,35,50,14
     RTEXT           "Static",IDC_STAT_ACTIVE,65,11,62,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_STAT_RESPONSETIME,65,22,62,8,SS_ENDELLIPSIS
     RTEXT           "Static",IDC_STAT_BYTESDELTA,65,33,62,8,SS_ENDELLIPSIS
+    GROUPBOX        "Statistics",IDC_STATIC,278,0,136,33
+    LTEXT           "Queue depth",IDC_STATIC,287,11,48,8
+    LTEXT           "Split count",IDC_STATIC,287,22,45,8
+    RTEXT           "Static",IDC_STAT_QUEUELENGTH,344,11,62,8,SS_ENDELLIPSIS
+    RTEXT           "Static",IDC_STAT_SPLITCOUNT,344,22,62,8,SS_ENDELLIPSIS
 END
 
 IDD_DISKDRIVE_DETAILS_SMART DIALOGEX 0, 0, 309, 265
@@ -242,7 +247,7 @@ BEGIN
 
     IDD_DISKDRIVE_PANEL, DIALOG
     BEGIN
-        RIGHTMARGIN, 329
+        RIGHTMARGIN, 415
         BOTTOMMARGIN, 49
     END
 
