--- a/plugins/Plugins.props
+++ b/plugins/Plugins.props
@@ -36,7 +36,7 @@
             <SupportJustMyCode>false</SupportJustMyCode>
         </ClCompile>
         <Link>
-            <AdditionalDependencies>ProcessHacker.lib;thirdparty.lib;ntdll.lib;noenv.obj;noarg.obj;%(AdditionalDependencies)</AdditionalDependencies>
+            <AdditionalDependencies>$(SolutionDir)..\bin\$(Configuration)$(PlatformArchitecture)\ProcessHacker.lib;thirdparty.lib;ntdll.lib;noenv.obj;noarg.obj;%(AdditionalDependencies)</AdditionalDependencies>
             <GenerateDebugInformation>true</GenerateDebugInformation>
             <SubSystem>Windows</SubSystem>
             <AdditionalOptions>/BREPRO /DEPENDENTLOADFLAG:0x800 /PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
