--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,3 +6,6 @@ contact_links:
   - name: Review open issues
     url: https://github.com/processhacker/processhacker/issues
     about: Check existing bug reports for already reported issues.
+  - name: Create a blank issue
+    url: https://github.com/processhacker/processhacker/issues/new
+    about: Create a blank issue for anything else.
