Update KPH for VS2022, Update coding style, Update version number

--- a/KProcessHacker/resource.rc
+++ b/KProcessHacker/resource.rc
@@ -1,7 +1,7 @@
 #include <windows.h>
 
-#define VER_COMMA 3,1,0,0
-#define VER_STR "3.1\0"
+#define VER_COMMA 3,2,0,0
+#define VER_STR "3.2\0"
 
 #define VER_FILEVERSION VER_COMMA
 #define VER_FILEVERSION_STR VER_STR
@@ -17,7 +17,7 @@
 #define VER_PRIVATEBUILD 0
 #define VER_PRERELEASE 0
 
-#define VER_COMPANYNAME_STR "wj32\0"
+#define VER_COMPANYNAME_STR "ProcessHacker\0"
 #define VER_FILEDESCRIPTION_STR "KProcessHacker\0"
 #define VER_LEGALCOPYRIGHT_STR "Licensed under the GNU GPL, v3.\0"
 #define VER_ORIGINALFILENAME_STR "kprocesshacker.sys\0"
